# zcad-rs

./: .gitignore  AGENTS.md  CHANGELOG.md
cad_source/zcad/commands/: uzccmdload.pas
zcad-rs/: Cargo.toml  Makefile  PORTING_PLAN.md
zcad-rs/config/: default.toml
zcad-rs/docs/: architecture.md  raster_clip_plan.md  raster_entity_research.md  raster_resource_strategy.md  stage0_summary.md  stage2_entity_matrix.md  stage4_kickoff.md  typeexporter_replacement.md
zcad-rs/runtime-builder/: Cargo.toml
zcad-rs/runtime-builder/src/: main.rs
zcad-rs/runtime-builder/tests/: typeexport_snapshot.rs
zcad-rs/zcad-app/: Cargo.toml  README.md
zcad-rs/zcad-app/src/: main.rs  runtime_assets.rs
zcad-rs/zcad-config/: Cargo.toml
zcad-rs/zcad-config/src/: lib.rs
zcad-rs/zcad-core/: Cargo.toml
zcad-rs/zcad-core/src/: lib.rs
zcad-rs/zcad-engine/: Cargo.toml
zcad-rs/zcad-engine/src/: command.rs  lib.rs
zcad-rs/zcad-frontend/: Cargo.toml
zcad-rs/zcad-frontend/src/: bevy_app.rs  cli.rs  errors.rs  lib.rs  loader.rs  resource_locator.rs
zcad-rs/zcad-io/: Cargo.toml
zcad-rs/zcad-io/src/: lib.rs
zcad-rs/zcad-io/tests/: dxf_loader.rs  golden.rs
zcad-rs/zcad-io/tests/data/: basic_entities.dxf  block_hatch.dxf  block_hatch_gradient.dxf  block_insert.dxf  block_multiline.dxf  bulge_polyline.dxf  dimension_angular.dxf  dimension_angular3pt.dxf  dimension_diameter.dxf  dimension_linear.dxf  dimension_radius.dxf  ellipse_basic.dxf  face3d_basic.dxf  hatch_ellipse.dxf  hatch_gradient.dxf  hatch_simple.dxf  hatch_spline.dxf  image_basic.dxf  image_clip_dict_basic.dxf  (+14 more)
(+33 files in other folders)
